# cameraframework-github

./: .gitignore  deploy_2_board  deploy_2_board.sh  deploy_2_cpm_adas_adservice.sh  deploy_2_greatwall.sh  deploy_2_publish.sh  setEnv.sh  开发指南_catme
000_Framework/CaseClient/src/SocketIPC/: CMakeCache.txt  CMakeLists.txt  CSocketIPC.cpp  Makefile  ServerSocket.cpp  cmake_install.cmake  renamemeMakefile
000_Framework/libABase/src/: CMakeLists.txt  Makefile
000_Framework/libABase/src/ADASManager/: AdasModuleCtrl.cpp  CAdasManager.cpp  Makefile
000_Framework/libABase/src/ExceptionManager/: CRCProc.h  ExceptionManager.cpp  ExceptionManager.h  FailSafe_CameraFreeze.uml  PlatformX.h  RVSCRC.cpp  RVSCRC.h  ScreenShot.cpp  ScreenShot.h
000_Framework/libABase/src/IPCManager/: IPCServiceAdaptor.cpp  IPCServiceAdaptor.h
000_Framework/libAFoundation/: CMakeLists.txt  README
000_Framework/libAFoundation/include/: AFoundation.h  CCRef.h  CEvent.h  CFunctor.h  CMQRunnableService.h  CMessage.h  CMessageHandler.h  CMessageQueue.h  CRunableBase.h  CTimer.h  EpollGPIO.h  Epoller.h  MessageForQueue.h  NanoIPC.h  State.h  StateMachine.h  ThreadPool.h  TraceMacros.h  TypeDefine.h
000_Framework/libAFoundation/proj/linux/: Makefile
000_Framework/libAFoundation/proj/qnx/: .cproject  .project  common.mk
000_Framework/libAFoundation/src/: CCRef.cpp  CEvent.cpp  CMQRunnableService.cpp  CMakeLists.txt  CMessage.cpp  CMessageHandler.cpp  CMessageQueue.cpp  CRunableBase.cpp  CTimer.cpp  EpollGPIO.cpp  Epoller.cpp  Makefile  NanoIPC.cpp  State.cpp  StateMachine.cpp
000_Framework/libAGraphic/src/: ADisplay.cpp  AEGL.cpp  AGraphic.cpp  AOpenGLES.cpp  CMakeLists.txt  Makefile
000_Framework/libAGraphic/src/GuideLine/: Calculator.cpp  GuideLine.cpp  GuideLineTypeDef.cpp
000_Framework/libAGraphic/src/Utility/: LCommon.cpp  LCommon.h  PVRTContext.h  PVRTError.cpp  Rosal.h  fileloader.cpp  fileloader.h  line2D.h  lineBorderOp.h  trajectory.h
000_Framework/libAGraphic/src/graphiclib/: GlShell.cpp  GlShell.h  GraphicPDC.cpp  GraphicPDC.h  GraphicVDT.cpp  GraphicVDT.h  GraphicVPAFord.cpp  GraphicVPAFord.h  HeadDefine.h  IGraphicPDC.h  lineBorderOp.h  lodepng.h
000_Framework/libAGraphic/src/shell/: GlGMRVS.cpp  GlGMRVS.h  GlGuideLine.cpp  GlGuideLine.h  GlHeaders.h  GlImage.cpp  GlLineGroup.cpp  GlLineGroup.h  GlParkSymbol.cpp  GlParkSymbol.h  GlRCTASymbol.cpp  GlRCTASymbol.h  GlShell.cpp  GlShell.h
001_Project/001_GWMV2MH/: CMakeLists.txt
001_Project/001_GWMV2MH/CaseClient/include/: CSocketIPC.h  ServerSocket.h
001_Project/001_GWMV2MH/DCIF_preintegration/: .project  ADAS.cdl
001_Project/001_GWMV2MH/DCIF_preintegration/intf/: ADAS.fidl  ADASBaseType.fidl
001_Project/001_GWMV2MH/NanoMsg/: Makefile  main.cpp
001_Project/001_GWMV2MH/Test/Camera/: .Makefile.un~  Makefile  cameraStateTest
001_Project/001_GWMV2MH/Test/NanoMsg/: nanotest
001_Project/001_GWMV2MH/Test/camera/: Makefile  cameraStateTest  main.cpp
001_Project/001_GWMV2MH/Test/graphic/: .Makefile.un~  graphicTest  main.cpp
001_Project/001_GWMV2MH/ThreadPool/: Makefile  main.cpp  threadPoolTest
001_Project/001_GWMV2MH/camera/: Makefile  cameraStateTest  main.cpp
001_Project/001_GWMV2MH/doc/: GWM_Platform_Feature-Functionlist_infotainment_V1_0_20170512.xlsx  GWMv2_ADASPlanV0.1.xlsx  GreatWall_Boot_Time_20161221_A01.pptx  TRS_GWM_AVM_MOD_v1.0.docx
001_Project/001_GWMV2MH/doc/HDD/: HDD_GWM_V2MH_ADAS_AVM_MOD.0.1.docx
001_Project/001_GWMV2MH/graphic/: Makefile  Makefile11  main.cpp
001_Project/001_GWMV2MH/guideline/: GuideLineTest  Makefile  main.cpp
001_Project/001_GWMV2MH/include/: AdasModuleCtrlImpl.h  CAdasManagerGWMv2.h  CameraDisplay.h  CameraDisplayTypeDefine.h  overlayWindow.h
001_Project/001_GWMV2MH/include/Camera/: CameraHubGWMv2.h  CameraStateMachineGWMv2.h
001_Project/001_GWMV2MH/include/Client/: PasServiceStubImplGWM.h  ReverseSignalReceive.h  RvcServiceStubImplGWM.h
001_Project/001_GWMV2MH/include/Pas/: FordPDCClientMsgObjs.h  FordPDCSerivceMsgObjs.h  FordPDCTest.h  PDCFactory.h  PDCGraphicFord.h  PDCMsgDefineFord.h  PDCMsgHandlerFord.h  PDCSensor.h  PDCServiceFord.h  PDCServiceStubImpl.hpp  PasStubImpl.h
001_Project/001_GWMV2MH/include/Rvc/: RvcMsgQDefine.h  RvcStubImpl.h
001_Project/001_GWMV2MH/libABase/include/: ABase.h
001_Project/001_GWMV2MH/libAFoundation/include/: CMQRunnableService.h  CMessageQueue.h  CRunableBase.h  CTimer.h  Epoller.h  MessageForQueue.h  Observer.h  StateMachine.h  Subject.h  TraceMacros.h  TypeDefine.h  platformdef.h
001_Project/001_GWMV2MH/libAGraphic/include/: ADisplay.h  AOpenGLES.h  TypeDefine.h
001_Project/001_GWMV2MH/prj/x86/: stdafx.cpp
001_Project/001_GWMV2MH/src/: AdasModuleCtrlImpl.cpp  CAdasManagerGWMv2.cpp  CMakeLists.txt  Makefile  main.cpp  maintest.cpp
001_Project/001_GWMV2MH/src-gen/: CMakeLists.txt
001_Project/001_GWMV2MH/src/Camera/: CameraHubGWMv2.cpp  CameraStateMachineGWMv2.cpp
001_Project/001_GWMV2MH/src/CameraDisplay/: CameraDisplay.cpp  PaintImpl.cpp
001_Project/001_GWMV2MH/src/Client/: PasServiceStubImplGWM.cpp  ReverseSignalReceive.cpp  RvcServiceStubImplGWM.cpp
001_Project/001_GWMV2MH/src/IPC/: IPCAdaptorGWMv2.cpp  IPCAdaptorGWMv2.h
001_Project/001_GWMV2MH/src/Pas/: CMakeLists.txt  FordPDCTest.cpp  PDCFactory.cpp  PDCGraphicFord.cpp  PDCMsgHandlerFord.cpp  PDCSensor.cpp  PDCServiceFord.cpp  PDCServiceStubImpl.cpp__  PasStubImpl.cpp
001_Project/001_GWMV2MH/src/Rvc/: RvcStubImpl.cpp
001_Project/001_GWMV2MH/src/graphics/: CScaniaGraphicsImpl.cpp  GraphicsMessageDefine.h
001_Project/001_GWMV2MH/src/logic/: CAdasCtrl.cpp  CAdasCtrl.hpp  CCamera.cpp  CCamera.hpp  CCameraDetection.cpp  CCameraFaultCheck.cpp  CCameraMANTruck.cpp  CCameraMANTruck.hpp  CCanProcessor.cpp  CCanProcessor.hpp  CDiagnosticProcessor.hpp  MessageDefineMAN.hpp
001_Project/001_GWMV2MH/src/overlayWindow/: overlayWindow.cpp
001_Project/001_GWMV2MH/src/provides/: AVMServiceStubImpl.cpp  AVMServiceStubImpl.hpp  AdasServiceStubImpl.cpp  AdasServiceStubImpl.hpp  PASServiceStubImpl.cpp  PASServiceStubImpl.hpp
001_Project/001_GWMV2MH/src/tmp/: main.cpp
(+1003 files in other folders)
